# bevy_pong

./: .gitignore  Cargo.toml  LICENSE  Readme.md  build_and_serve.sh  build_web.sh  publish.sh
src/: lib.rs  main.rs  prestart.rs  scoreboard.rs
static/: index.html
